cmake_minimum_required(VERSION 4.2)
project(CppPractice)

set(CMAKE_CXX_STANDARD 20)

add_executable(area_of_rectangle area_of_rectangle.cpp)
add_executable(arithmetic_operations arithmetic_operations.cpp)
add_executable(average_of_three average_of_three.cpp)
add_executable(data_type_sizes data_type_sizes.cpp)
add_executable(ascii_value ascii_value.cpp)
add_executable(swap_two_numbers swap_two_numbers.cpp)
add_executable(simple_interest simple_interest.cpp)
add_executable(even_or_odd even_or_odd.cpp)
add_executable(largest_of_three largest_of_three.cpp)
