cmake_minimum_required(VERSION 4.2)
project(CppPractice)

set(CMAKE_CXX_STANDARD 20)

add_executable(area_of_rectangle area_of_rectangle.cpp)
add_executable(arithmetic_operations arithmetic_operations.cpp)
add_executable(average_of_three average_of_three.cpp)
add_executable(data_type_sizes data_type_sizes.cpp)
add_executable(ascii_value ascii_value.cpp)
add_executable(swap_two_numbers swap_two_numbers.cpp)
add_executable(simple_interest simple_interest.cpp)
add_executable(even_or_odd even_or_odd.cpp)
add_executable(largest_of_three largest_of_three.cpp)
add_executable(leap_year_check leap_year_check.cpp)
add_executable(simple_calculator simple_calculator.cpp)
add_executable(grade_checker grade_checker.cpp)
add_executable(triangle_type triangle_type.cpp)
add_executable(natural_number_sum natural_number_sum.cpp)
add_executable(multiplication_table multiplication_table.cpp)
add_executable(factorial factorial.cpp)
add_executable(fibonacci_series fibonacci_series.cpp)
add_executable(reverse_a_number reverse_a_number.cpp)
add_executable(count_digit count_digit.cpp)
add_executable(pattern_printing_square pattern_printing_square.cpp)
add_executable(pattern_printing_right_triangle pattern_printing_right_triangle.cpp)
add_executable(greatest_common_divisor greatest_common_divisor.cpp)
add_executable(array_sum array_sum.cpp)
add_executable(largest_element largest_element.cpp)
add_executable(search_element search_element.cpp)
add_executable(count_occurrences count_occurrences.cpp)
add_executable(reverse_array reverse_array.cpp)
add_executable(print_even_numbers print_even_numbers.cpp)
add_executable(swap_first_and_last swap_first_and_last.cpp)
